# beautyhouse

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dependencies.py  docker-compose.test.yml  docker-compose.yml  gunicorn.confic.py  handlers.py  main.py  pyproject.toml  requirements.txt  schema.py
.github/workflows/: .github.ci.yml
alembic/: env.py
alembic/versions/: 39d284ebfc05_first_try.py  c4907b1a52b1_db.py
app/: __init__.py  exceptions.py  main.py  settings.py
app/*beauty_services/: repository.py
app/*masters/auth/: schema.py  service.py
app/*masters/profile/: models.py  schema.py
app/application/beauty_services/: dtos.py  use_cases.py
app/beauty_services/: handlers.py  models.py  repository.py  schema.py  service.py
app/domain/: jwt_interface.py
app/domain/beauty_services/: entities.py  interface.py
app/domain/masters/: entities.py  interface.py  jwt_interface.py  repository.py
app/infrastructure/: db.py  exceptions.py  jwt_service.py
app/infrastructure/beauty_services/: models.py  repository.py
app/infrastructure/database/: __init__.py  accessor.py
app/infrastructure/masters/: models.py  repository.py
app/masters/auth/: handlers.py  service.py
app/masters/profile/: handlers.py  models.py  repository.py  service.py
app/presentation/: dependencies.py  jwt_service.py
app/tests/: conftest.py
app/tests/fixtures/: infrastructure.py
app/tests/integration/: test_masters_service_integration.py  test_services_service_integration.py
tests/: conftest.py
tests/E2E/: conftest.py
tests/fakes/: fake_beauty_service_data.py  fake_master_auth_data.py  fake_master_profile_data.py
tests/fixture/: infrastructure.py  masters_service.py
tests/fixtures/: infrastructure.py
tests/fixtures/beauty_services/: beauty_services_repository.py  beauty_services_service.py  (+1 more)
tests/integration/: test_master_profile_repository_integration.py  test_masters_service_integration.py  test_masters_use_cases_integration.py  test_services_repository_integration.py  test_services_service_integration.py
tests/unit/: test_jwt_service.py  test_masters_service_unit.py  test_masters_service_unit_async.py  test_masters_use_cases_unit.py
(+61 files in other folders)
