[project]
name = "beautyhouse"
version = "0.1.0"
description = "Service for beauty masters"
authors = [
    {name = "Your Name",email = "you@example.com"}
]

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.31.0"
pytest = "^9.1.1"

[tool.poetry.group.dev.dependencies]
python = "^3.10"
factory_boy = "3.3.3"
Faker = "40.28.1"
fastapi = "0.139.0"
httpx = "0.28.1"
pydantic = ">=2.7.0"
pydantic_settings = "2.14.2"
pytest_asyncio = "1.3.0"
pytest_mock = "3.15.1"
SQLAlchemy = "2.0.51"
uvicorn = "0.50.2"
pycryptodome = ">=3.23.0,<4.0.0"
pyjwt = ">=2.13.0,<3.0.0"
ruff = ">=0.15.20,<0.16.0"
py = "^1.11.0"

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
